--- a/institutionAliases.tex
+++ b/institutionAliases.tex
@@ -27,6 +27,7 @@
 \newcommand{\Bub}{Boston University, Boston, MA 02215}
 \newcommand{\BU}{Boston University, Boston, MA 02215}
 \newcommand{\Buffalo}{Department of Physics, University at Buffalo, SUNY Buffalo, NY 14260 USA}
+\newcommand{\Cab}{Centro de Astrobiologia (CAB, CSIC-INTA), Villanueva de la Canada, 28692, Spain}
 \newcommand{\Caltech}{California Institute of Technology, Pasadena, CA 91125}
 \newcommand{\Cardiff}{School of Physics and Astronomy, Cardiff University, The Parade, Cardiff, CF24 3AA, UK}
 \newcommand{\Carleton}{Carleton University, K1S 5B6 Ottawa, Canada}
